--- a/portfolio/public/index.html
+++ b/portfolio/public/index.html
@@ -4,40 +4,35 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/logo_sg.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <meta name="theme-color" content="#0f1623" />
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+
+    <title>Saathveek Gowrishankar</title>
+    <meta name="description" content="Portfolio of Saathveek Gowrishankar, Computer Engineer and Data Scientist" />
+    <link rel="canonical" href="https://saathveek.com" />
+    <meta name="keywords" content= "Saathveek, Gowrishankar, Saathveek Gowrishankar, Portfolio, Engineer, Computer Engineer, Software Engineer, Infrastructure Engineer, Software Developer, Dev, Backend, Full Stack, Electrical and Computer Engineering, ECE, Computer Science, CS, CE, Computer Engineering, Machine Learning, Artificial Intelligence, Deep Learning, ML, AI, DL, Data Engineer, Data Scientist, Data Analyst, Intern, Student, Researcher, Research Assistant, UIUC, Illinois, Urbana, Champaign, University of Illinois, Urbana-Champaign, BCBS, HCSC, Blue Cross, Blue Shield, Mullbry, HFA, Human Factors and Aging" />
+    <meta name="author" content="Saathveek Gowrishankar" />
+
+    <meta property="og:title" content="Saathveek Gowrishankar" />
+    <meta property="og:description" content="Portfolio of Saathveek Gowrishankar, Computer Engineer and Data Scientist" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://saathveek.com" />
+    <meta property="og:image" content="%PUBLIC_URL%/logo_sg.png" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Saathveek Gowrishankar" />
+    <meta name="twitter:description" content="Portfolio of Saathveek Gowrishankar, Computer Engineer and Data Scientist" />
+    <meta name="twitter:image" content="%PUBLIC_URL%/logo_sg.png" />
+
+
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo_sg.png" />
+
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
