--- a/portfolio/public/index.html
+++ b/portfolio/public/index.html
@@ -1,38 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/logo_sg.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#0f1623" />
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/logo_sg.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#0f1623" />
+
+  <title>Saathveek Gowrishankar</title>
+  <meta name="description" content="Portfolio of Saathveek Gowrishankar, Computer Engineer and Data Scientist" />
+  <link rel="canonical" href="https://saathveek.com" />
+  <meta name="keywords" content="Saathveek, Gowrishankar, Saathveek Gowrishankar, Portfolio, Engineer, Computer Engineer, Software Engineer, Infrastructure Engineer, Software Developer, Dev, Backend, Full Stack, Electrical and Computer Engineering, ECE, Computer Science, CS, CE, Computer Engineering, Machine Learning, Artificial Intelligence, Deep Learning, ML, AI, DL, Data Engineer, Data Scientist, Data Analyst, Intern, Student, Researcher, Research Assistant, UIUC, Illinois, Urbana, Champaign, University of Illinois, Urbana-Champaign, NTU, Nanyang Technological University, Singapore, BCBS, HCSC, Blue Cross, Blue Shield, Mullbry, HFA, Human Factors and Aging, Chicago, Naperville, Neuqua, Valley, NVHS" />
+  <meta name="author" content="Saathveek Gowrishankar" />
+
+  <meta property="og:title" content="Saathveek Gowrishankar" />
+  <meta property="og:description" content="Portfolio of Saathveek Gowrishankar, Computer Engineer and Data Scientist" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://saathveek.com" />
+  <meta property="og:image" content="%PUBLIC_URL%/logo_sg.png" />
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Saathveek Gowrishankar" />
+  <meta name="twitter:description" content="Portfolio of Saathveek Gowrishankar, Computer Engineer and Data Scientist" />
+  <meta name="twitter:image" content="%PUBLIC_URL%/logo_sg.png" />
 
 
-    <title>Saathveek Gowrishankar</title>
-    <meta name="description" content="Portfolio of Saathveek Gowrishankar, Computer Engineer and Data Scientist" />
-    <link rel="canonical" href="https://saathveek.com" />
-    <meta name="keywords" content= "Saathveek, Gowrishankar, Saathveek Gowrishankar, Portfolio, Engineer, Computer Engineer, Software Engineer, Infrastructure Engineer, Software Developer, Dev, Backend, Full Stack, Electrical and Computer Engineering, ECE, Computer Science, CS, CE, Computer Engineering, Machine Learning, Artificial Intelligence, Deep Learning, ML, AI, DL, Data Engineer, Data Scientist, Data Analyst, Intern, Student, Researcher, Research Assistant, UIUC, Illinois, Urbana, Champaign, University of Illinois, Urbana-Champaign, BCBS, HCSC, Blue Cross, Blue Shield, Mullbry, HFA, Human Factors and Aging" />
-    <meta name="author" content="Saathveek Gowrishankar" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo_sg.png" />
 
-    <meta property="og:title" content="Saathveek Gowrishankar" />
-    <meta property="og:description" content="Portfolio of Saathveek Gowrishankar, Computer Engineer and Data Scientist" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://saathveek.com" />
-    <meta property="og:image" content="%PUBLIC_URL%/logo_sg.png" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Saathveek Gowrishankar" />
-    <meta name="twitter:description" content="Portfolio of Saathveek Gowrishankar, Computer Engineer and Data Scientist" />
-    <meta name="twitter:image" content="%PUBLIC_URL%/logo_sg.png" />
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Saathveek Gowrishankar",
+  "url": "https://saathveek.com",
+  "sameAs": [
+    "https://www.linkedin.com/in/saathveek",
+    "https://github.com/saathveek-gowrishankar",
+    "https://instagram.com/saathveekg",
+    "https://www.facebook.com/saathveekg",
+  ],
+  "jobTitle": "Computer Engineer and Data Scientist",
+  "image": "https://saathveek.com/saathveek_head.png",
+  "alumniOf": {
+    "@type": "CollegeOrUniversity",
+    "name": "University of Illinois Urbana-Champaign"
+  }
+}
+</script>
 
 
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo_sg.png" />
 
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+</head>
 
-    
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+</body>
+
 </html>
