--- a/portfolio/public/index.html
+++ b/portfolio/public/index.html
@@ -3,7 +3,12 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/logo_sg.ico" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" /> 
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap">
+  <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap"> -->
+
+  <link rel="icon" href="/logo_sg.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#0f1623" />
 
@@ -17,47 +22,43 @@
   <meta property="og:description" content="Portfolio of Saathveek Gowrishankar, Computer Engineer and Data Scientist" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://saathveek.com" />
-  <meta property="og:image" content="%PUBLIC_URL%/logo_sg.png" />
+  <meta property="og:image" content="/logo_sg.png" />
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Saathveek Gowrishankar" />
   <meta name="twitter:description" content="Portfolio of Saathveek Gowrishankar, Computer Engineer and Data Scientist" />
-  <meta name="twitter:image" content="%PUBLIC_URL%/logo_sg.png" />
-
-
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo_sg.png" />
-
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
+  <meta name="twitter:image" content="/logo_sg.png" />
+  
+  <link rel="apple-touch-icon" href="/logo_sg.png" />
+    
+  <link rel="manifest" href="/manifest.json" />
+  
   <script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "Person",
-  "name": "Saathveek Gowrishankar",
-  "url": "https://saathveek.com",
-  "sameAs": [
-    "https://www.linkedin.com/in/saathveek",
-    "https://github.com/saathveek-gowrishankar",
-    "https://instagram.com/saathveekg",
-    "https://www.facebook.com/saathveekg",
-    "https://orcid.org/0009-0002-6201-2974",
-    "http://www.nvtee.org/senior-department-awards.html",
-    "https://support.ewb-usa.org/fundraiser/4518656",
-    "https://dailyillini.com/life_and_culture-stories/2024/09/26/ewb-builds-bridges-improves-sanitation/",
-    "https://hfaging.ahs.illinois.edu/hri-undergrads-present-during-research-week/",
-    "https://www.linkedin.com/company/engineers-without-borders-uiuc-chapter/"
-  ],
-  "jobTitle": "Computer Engineer and Data Scientist",
-  "image": "https://saathveek.com/saathveek_head.png",
-  "alumniOf": {
-    "@type": "CollegeOrUniversity",
-    "name": "University of Illinois Urbana-Champaign"
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Saathveek Gowrishankar",
+    "url": "https://saathveek.com",
+    "sameAs": [
+      "https://www.linkedin.com/in/saathveek",
+      "https://github.com/saathveek",
+      "https://instagram.com/saathveekg",
+      "https://www.facebook.com/saathveekg",
+      "https://orcid.org/0009-0002-6201-2974",
+      "http://www.nvtee.org/senior-department-awards.html",
+      "https://support.ewb-usa.org/fundraiser/4518656",
+      "https://dailyillini.com/life_and_culture-stories/2024/09/26/ewb-builds-bridges-improves-sanitation/",
+      "https://hfaging.ahs.illinois.edu/hri-undergrads-present-during-research-week/",
+      "https://www.linkedin.com/company/engineers-without-borders-uiuc-chapter/"
+    ],
+    "jobTitle": "Computer Engineer and Data Scientist",
+    "image": "https://saathveek.com/saathveek_head.png",
+    "alumniOf": {
+      "@type": "CollegeOrUniversity",
+      "name": "University of Illinois Urbana-Champaign"
+    }
   }
-}
-</script>
-
-
-
+  </script>
 </head>
 
 <body>
